dev/route-hello-world.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: 80
